src/test/ui/nll/issue-52663-span-decl-captured-variable.stderr
error[E0507]: cannot move out of captured variable in an `Fn` closure
  --> $DIR/issue-52663-span-decl-captured-variable.rs:10:26
   |
LL |        let x = (vec![22], vec![44]);
   |            - captured outer variable
LL |        expect_fn(|| drop(x.0));
   |                          ^^^ cannot move out of captured variable in an `Fn` closure

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
